--- a/.github/workflows/inc-build.yml
+++ b/.github/workflows/inc-build.yml
@@ -34,7 +34,7 @@ jobs:
         id: build-image
         uses: redhat-actions/buildah-build@v2
         with:
-          image: ${{ github.repository }}/dockerhub_ratelimit_exporter
+          image: ${{ github.repository_owner }}/dockerhub_ratelimit_exporter
           tags: unstable ${{ github.sha }}
           context: ./container
           dockerfiles: |
@@ -45,6 +45,6 @@ jobs:
         with:
           image: ${{ steps.build-image.outputs.image }}
           tags: ${{ steps.build-image.outputs.tags }}
-          registry: docker.pkg.github.com
+          registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.CR_TOKEN }}
