--- a/.github/workflows/inc-build.yml
+++ b/.github/workflows/inc-build.yml
@@ -26,25 +26,51 @@ jobs:
             ${{ runner.os }}-go-
 
       - name: "Build linux-amd64"
-        run: |
-          go build
-          mv dockerhub_ratelimit_exporter ./container
+        env:
+          GOOS: linux
+          GOARCH: amd64
+          CGO_ENABLED: 0
+          GO111MODULE: on
+        run: go build -o container/dockerhub_ratelimit_exporter
 
-      - name: "Build Image"
-        id: build-image
-        uses: redhat-actions/buildah-build@v2
-        with:
-          image: ${{ github.repository_owner }}/dockerhub_ratelimit_exporter
-          tags: unstable ${{ github.sha }}
-          context: ./container
-          dockerfiles: |
-            ./container/Containerfile
+#      - name: "Build Image"
+#        id: build-image
+#        uses: redhat-actions/buildah-build@v2
+#        with:
+#          image: k3rnelpan1c/dockerhub_ratelimit_exporter
+#          tags: unstable ${{ github.sha }}
+#          oci: true
+#          context: ./container
+#          dockerfiles: |
+#            ./container/Containerfile
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
-      - name: "Publish Image"
-        uses: redhat-actions/push-to-registry@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
         with:
-          image: ${{ steps.build-image.outputs.image }}
-          tags: ${{ steps.build-image.outputs.tags }}
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: ${{ github.repository_owner }}
           password: ${{ secrets.CR_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          file: ./container/Containerfile
+          context: ./container
+          push: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/dockerhub_ratelimit_exporter:unstable
+            ghcr.io/${{ github.repository_owner }}/dockerhub_ratelimit_exporter:${{ github.sha }}
+
+#      - name: "Publish Image"
+#        uses: redhat-actions/push-to-registry@v2
+#        with:
+#          image: ${{ github.repository_owner }}/dockerhub_ratelimit_exporter
+#          tags: unstable ${{ github.sha }}
+#          registry: ghcr.io
+#          username: ${{ github.actor }}
+#          password: ${{ secrets.CR_TOKEN }}
