--- a/.github/workflows/inc-build.yml
+++ b/.github/workflows/inc-build.yml
@@ -6,8 +6,8 @@ on:
 jobs:
   inc-build:
     name: "Build and Publish"
-    runs-on: ubuntu-latest
-
+    runs-on: ubuntu-20.04
+    
     steps:
       - name: "Checkout repository"
         uses: actions/checkout@v2
